# reachy_2023

./: .gitattributes  .gitignore  LICENSE  README.md  README_GRASPING_POC.md  dependencies.sh  requirements.txt
mobile_base_controller/zuuu_description/: CMakeLists.txt  README.md  package.xml  ros_record_simu_topics.md
mobile_base_controller/zuuu_description/config/: default_slam.yaml  ekf.yaml  galactic_bt.xml  nav2_params.yaml  slam.yaml  zuuu_controllers.yaml
mobile_base_controller/zuuu_description/launch/: description_bringup.launch.py  full_simulation_navigation.launch.py  gazebo_simulation.launch.py  mapping.launch.py  navigation.launch.py  rviz_bringup.launch.py  rviz_lidar_only.launch.py  rviz_navigation.launch.py  zuuu_bringup.launch.py  zuuu_bringup_low_level_only.launch.py  zuuu_bringup_no_rviz.launch.py  zuuu_full_mapping.launch.py  zuuu_full_navigation.launch.py
mobile_base_controller/zuuu_description/maps/: hospital.pgm  hospital.yaml  humble_hospital.pgm  humble_hospital.yaml  jean_jaures_haut.pgm  jean_jaures_haut.yaml  jean_jaures_haut_old.pgm  jean_jaures_haut_old.yaml  pollen.pgm  pollen.yaml  pollen0.pgm  pollen0.yaml
mobile_base_controller/zuuu_description/meshes/: reachy_mobile_pauvre.dae
mobile_base_controller/zuuu_description/models/: Ar_tag.dae
mobile_base_controller/zuuu_description/models/AdjTable/: model.sdf
mobile_base_controller/zuuu_description/models/AnesthesiaMachine/: model.sdf
mobile_base_controller/zuuu_description/models/Ar_tags/: model.sdf
mobile_base_controller/zuuu_description/models/Ar_tags_nr11/: model.sdf
mobile_base_controller/zuuu_description/models/Ar_tags_nr12/: model.sdf
mobile_base_controller/zuuu_description/models/Ar_tags_nr13/: model.sdf
mobile_base_controller/zuuu_description/models/Ar_tags_nr2/: model.sdf
mobile_base_controller/zuuu_description/models/Ar_tags_nr8/: model.sdf
mobile_base_controller/zuuu_description/models/Ar_tags_nr9/: model.sdf
mobile_base_controller/zuuu_description/models/BMWCart/: model.sdf
mobile_base_controller/zuuu_description/models/BPCart/: model.sdf
mobile_base_controller/zuuu_description/models/BedTable/: model.sdf
mobile_base_controller/zuuu_description/models/BedsideTable/: model.sdf
mobile_base_controller/zuuu_description/models/BloodPressureMonitor/: model.sdf
mobile_base_controller/zuuu_description/models/CGMClassic/: model.sdf
mobile_base_controller/zuuu_description/models/Chair/: model.sdf
mobile_base_controller/zuuu_description/models/Drawer/: model.sdf
mobile_base_controller/zuuu_description/models/ElderLadyPatient/: model.sdf
mobile_base_controller/zuuu_description/models/ElderMalePatient/: model.sdf
mobile_base_controller/zuuu_description/models/FemaleVisitor/: model.sdf
mobile_base_controller/zuuu_description/models/FemaleVisitorSit/: model.sdf
mobile_base_controller/zuuu_description/models/IVStand/: model.sdf
mobile_base_controller/zuuu_description/models/InstrumentCart1/: model.sdf
mobile_base_controller/zuuu_description/models/InstrumentCart2/: model.sdf
mobile_base_controller/zuuu_description/models/KitchenSink/: model.sdf
mobile_base_controller/zuuu_description/models/MalePatientBed/: model.sdf
mobile_base_controller/zuuu_description/models/MaleVisitorOnPhone/: model.sdf
mobile_base_controller/zuuu_description/models/MaleVisitorSit/: model.sdf
mobile_base_controller/zuuu_description/rviz/: bringup.rviz  lidar.rviz  mapping.rviz  navigation.rviz
mobile_base_controller/zuuu_description/urdf/: zuuu.gazebo.xacro  zuuu.ros2_control.xacro  zuuu.urdf.xacro  zuuu_description.urdf.xacro  zuuu_description_all.urdf.xacro
mobile_base_controller/zuuu_description/worlds/: hospital_simple.world  model.sdf  my_world.sdf
pid_command_controller/: package.xml
pid_command_controller/include/pid_command_controller/: visibility_control.h
pid_command_controller/src/: pid_command_controller.cpp
reachy_controllers/arm_system_hwi/: CMakeLists.txt  arm_system_hwi.xml  package.xml
reachy_controllers/arm_system_hwi/src/: arm_system_hwi.cpp
reachy_controllers/head_system_hwi/: CMakeLists.txt  package.xml
reachy_controllers/head_system_hwi/src/: head_system_hwi.cpp
reachy_controllers/pid_command_controller/: CMakeLists.txt  pid_command_plugin.xml
reachy_controllers/pid_command_controller/src/: pid_command_controller.cpp
reachy_controllers/reachy_2023_controllers_rs/arm_controller/: Cargo.toml
reachy_controllers/reachy_2023_controllers_rs/head_hwi/: Cargo.toml  build.rs  head_hwi.h  package.xml
reachy_controllers/reachy_2023_controllers_rs/neck_hwi/: Cargo.toml  build.rs  neck_hwi.h  package.xml
reachy_description/: CMakeLists.txt  package.xml
reachy_description/config/: reachy.rviz  reachy_grasping.rviz
reachy_description/launch/: display.launch.py
reachy_description/meshes/: antenna.dae  l_gripper_finger.dae  orbita_arm.dae  r_gripper_finger.dae  shoulder.dae  shoulder_x.dae  wrist2hand.dae
reachy_description/ros2_control/: arm.ros2_control.xacro  head.ros2_control.xacro  joint.ros2_control.xacro  orbita.ros2_control.xacro
reachy_description/urdf/: arm.urdf.xacro  head.urdf.xacro  meshed_arm.urdf.xacro  orbita.urdf.xacro  reachy.urdf.xacro
reachy_gazebo_gripper_glue/: CMakeLists.txt  ReadMe.md  package.xml
reachy_gazebo_gripper_glue/src/: reachy_gazebo_gripper_glue.cpp
reachy_msgs/: CMakeLists.txt  package.xml
reachy_msgs/action/: GotoTrajectory.action
reachy_msgs/msg/: GraspPose.msg  GraspPoseArray.msg  Gripper.msg  ReachableGraspTriplet.msg  ReachableGraspTripletArray.msg  TrajectoryFeedback.msg  TrajectoryResult.msg  ZoomCommand.msg
reachy_msgs/srv/: GetCameraZoomFocus.srv  GetCameraZoomLevel.srv  GetCameraZoomSpeed.srv  GetDynamicState.srv  GetForwardKinematics.srv  GetGraspCNN.srv  GetInverseKinematics.srv  GetKnownLabels.srv  GetObjectDetection.srv  GetReachability.srv  GetReachableGraspTriplets.srv  GetSimpleGraspPose.srv  SetCameraZoomFocus.srv  SetCameraZoomLevel.srv  SetCameraZoomSpeed.srv  SetDynamicState.srv  SetFocusState.srv
(+479 files in other folders)
