<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reachy_description</name>
  <version>0.1.0</version>
  <description>ROS2 Humble package for publishing Reachy's 2023 URDF and visualizing in Rviz.</description>
  <maintainer email="contact@pollen-robotics.com">Pollen Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
