[package]
name = "arm_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
rustypot = "0.3.1"
serialport = "4.2.0"
cache_cache = "0.1.0"
motor_model = { path = "../motor_model" }