[package]
name = "head_hwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.138"
head_controller = { path = "../head_controller" }
itertools = "0.10.5"

[build-dependencies]
cbindgen = "0.24.3"

[lib]
crate-type = ["staticlib"]
